News UAT/force-app/main/default/objects/Customer_Role_Access__c/Customer_Role_Access__c.object-meta.xml
<CustomObject>
    <description>Defines the Access granted to community users with a contact role to My Account</description>
    <label>Customer Role Access</label>
    <nameField>
        <displayFormat>CRA-{0000}</displayFormat>
        <label>Customer Role Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Role Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>