News UAT/force-app/main/default/objects/Customer_Role_Access__c/fields/Community_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Profile__c</fullName>
    <description>Profile to be used for the corresponding Contact Role</description>
    <inlineHelpText>Profile to be used for the corresponding Contact Role</inlineHelpText>
    <label>Community User Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewsXtend My Account Community Read Only</fullName>
            </value>
            <value>
                <fullName>NewsXtend My Account Community Read Only Login</fullName>
            </value>
            <value>
                <fullName>Partner Community Login Read Only</fullName>
                <isActive>false</isActive>
                <label>Partner Community Login Read Only</label>
            </value>
            <value>
                <fullName>Partner Community User Custom</fullName>
                <isActive>false</isActive>
                <label>Partner Community User Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>