News UAT/force-app/main/default/objects/Customer_Role_Access__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>Role corresponding to Contact Role in the Contact Roles Object</description>
    <inlineHelpText>Select role corresponding to Contact Role in the Contact Roles Object</inlineHelpText>
    <label>Contact Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewsXtend Agency</fullName>
            </value>
            <value>
                <fullName>NewsXtend Customer - Mgmt</fullName>
            </value>
            <value>
                <fullName>NewsXtend Customer - Non Mgmt</fullName>
            </value>
            <value>
                <fullName>NewsXtend Web Developer</fullName>
            </value>
            <value>
                <fullName>NewsXtend NRM Sales Rep</fullName>
            </value>
            <value>
                <fullName>NewsXtend CNG Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>