News UAT/force-app/main/default/objects/Customer_Role_Access__c/fields/Proof_Access__c.field-meta.xml
<CustomField>
    <fullName>Proof_Access__c</fullName>
    <description>Level of access granted to Contact for the Proof Object</description>
    <inlineHelpText>Level of access granted to Contact for the Proof Object</inlineHelpText>
    <label>Proof Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Public Read</fullName>
            </value>
            <value>
                <fullName>Public Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>