News UAT/force-app/main/default/objects/Customer_Role_Access__c/listViews/All_Customer_Roles.listView-meta.xml
<ListView>
    <fullName>All_Customer_Roles</fullName>
    <columns>NAME</columns>
    <columns>Contact_Role__c</columns>
    <columns>Customer_Activity_Access__c</columns>
    <columns>Account_Access__c</columns>
    <columns>Proof_Access__c</columns>
    <columns>Community_User_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Customer Roles</label>
</ListView>